--- a/bureau.html
+++ b/bureau.html
@@ -118,7 +118,8 @@
             objetsRestants--;
             verifierFin();
         } else {
-            alert("Ce fichier est inutile, jetez-le à la corbeille.");
+            //alert("Ce fichier est inutile, jetez-le à la corbeille.");
+            afficherMessage("Attention !", "Ce fichier est inutile, jetez-le à la corbeille.");
         }
     }
 
@@ -135,3 +136,4 @@
 </body>
 
 </html>
+
