--- a/bureau.html
+++ b/bureau.html
@@ -6,6 +6,7 @@
     <title>Gérer son Bureau et ses Dossiers</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         .cible-depot {
             position: absolute; width: 130px; height: 150px; border: 3px dashed rgba(255,255,255,0.3);
@@ -136,4 +137,5 @@
 </body>
 
 </html>
+
 
