Add favicon and enhance HTML layout
Added favicon and improved HTML structure.

--- a/excel.html
+++ b/excel.html
@@ -5,6 +5,7 @@
     <title>S'initier à Excel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         .tableur-container {
             width: 100%; max-width: 700px; margin: 20px auto;
@@ -101,4 +102,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
