Add favicon and enhance modal features
Added favicon link and improved modal functionality.

--- a/explorateur.html
+++ b/explorateur.html
@@ -6,6 +6,7 @@
     <title>Explorateur de fichiers - Arborescence Dynamique</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         .win-explorer {
             display: flex;
@@ -441,4 +442,5 @@
         majInterface();
     </script>
 </body>
+
 </html>
