--- a/internet.html
+++ b/internet.html
@@ -6,6 +6,7 @@
     <title>Cours Internet - Naviguer en sécurité</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body class="page-cours">
 
@@ -66,4 +67,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
