Add favicon and enhance HTML structure
Added favicon link and improved HTML structure.

--- a/powerpoint.html
+++ b/powerpoint.html
@@ -5,6 +5,7 @@
     <title>S'initier à PowerPoint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         .diapositive {
             width: 100%; max-width: 600px; height: 350px;
@@ -109,4 +110,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
