--- a/word.html
+++ b/word.html
@@ -6,6 +6,7 @@
     <title>Cours Word - Écrire ses premiers textes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         /* Styles spécifiques pour le simulateur Word */
         .logiciel-word {
@@ -138,4 +139,5 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
